<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/dialog_padding_x"
    android:paddingEnd="@dimen/dialog_padding_x"
    android:paddingTop="@dimen/dialog_padding_y"
    android:paddingBottom="@dimen/dialog_padding_y">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_about_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/about_description" />

        <!-- Libraries -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/libraries"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_about_libraries_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_libraries" />

    </LinearLayout>

</ScrollView>