<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <ImageView
                android:id="@+id/barcode_icon"
                android:layout_width="@dimen/ic_size"
                android:layout_height="@dimen/ic_size"
                android:layout_margin="16dp"
                android:contentDescription="@string/cont_type"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:src="@drawable/ic_text" />
            
            <TextView
                android:id="@+id/barcode_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintStart_toEndOf="@id/barcode_icon"
                app:layout_constraintTop_toTopOf="@id/barcode_icon"
                tools:text="@string/tools_type" />

            <TextView
                android:id="@+id/barcode_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintStart_toEndOf="@id/barcode_icon"
                app:layout_constraintTop_toBottomOf="@id/barcode_type"
                tools:text="@string/tools_date" />

            <Button
                style="@style/Button"
                android:id="@+id/barcode_wifi_view_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/wifi_view_key"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:id="@+id/barcode_value_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/list_selector"
                app:layout_constraintTop_toBottomOf="@id/barcode_icon">

                <TextView
                    android:id="@+id/barcode_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textIsSelectable="true"
                    android:textAppearance="?android:textAppearanceMedium"
                    tools:text="@string/tools_value" />

            </LinearLayout>

            <GridLayout
                android:id="@+id/barcode_action_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:rowCount="1"
                android:columnCount="4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barcode_value_layout">

                <!-- Action: 1 -->
                <androidx.cardview.widget.CardView
                    style="@style/BarcodeActionCardView"
                    android:id="@+id/barcode_action_1"
                    android:layout_column="0"
                    tools:visibility="visible">

                    <ImageView
                        style="@style/BarcodeActionIcon"
                        android:id="@+id/barcode_action_1_icon"
                        tools:src="@drawable/ic_search" />

                    <TextView
                        style="@style/BarcodeActionText"
                        android:id="@+id/barcode_action_1_text"
                        tools:text="@string/action_search" />

                </androidx.cardview.widget.CardView>

                <!-- Action: 2 -->
                <androidx.cardview.widget.CardView
                    style="@style/BarcodeActionCardView"
                    android:id="@+id/barcode_action_2"
                    android:layout_column="1"
                    tools:visibility="visible">

                    <ImageView
                        style="@style/BarcodeActionIcon"
                        android:id="@+id/barcode_action_2_icon"
                        tools:src="@drawable/ic_phone" />

                    <TextView
                        style="@style/BarcodeActionText"
                        android:id="@+id/barcode_action_2_text"
                        tools:text="@string/action_call" />

                </androidx.cardview.widget.CardView>

                <!-- Action: 3 -->
                <androidx.cardview.widget.CardView
                    style="@style/BarcodeActionCardView"
                    android:id="@+id/barcode_action_3"
                    android:layout_column="2"
                    tools:visibility="visible">

                    <ImageView
                        style="@style/BarcodeActionIcon"
                        android:id="@+id/barcode_action_3_icon"
                        tools:src="@drawable/ic_sms" />

                    <TextView
                        style="@style/BarcodeActionText"
                        android:id="@+id/barcode_action_3_text"
                        tools:text="@string/action_sms" />

                </androidx.cardview.widget.CardView>

                <!-- Action: 4 -->
                <androidx.cardview.widget.CardView
                    style="@style/BarcodeActionCardView"
                    android:id="@+id/barcode_action_4"
                    android:layout_column="3"
                    tools:visibility="visible">

                    <ImageView
                        style="@style/BarcodeActionIcon"
                        android:id="@+id/barcode_action_4_icon"
                        tools:src="@drawable/ic_wifi" />

                    <TextView
                        style="@style/BarcodeActionText"
                        android:id="@+id/barcode_action_4_text"
                        tools:text="@string/action_connect" />

                </androidx.cardview.widget.CardView>

            </GridLayout>

            <androidx.cardview.widget.CardView
                style="@style/QrCardView"
                android:id="@+id/qr_code_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginEnd="56dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/barcode_action_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:visibility="visible">

                <ImageView
                    style="@style/QrImageView"
                    android:id="@+id/qr_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>